more fixes -- section labels turn color when an item is selected, fixes for jumping to flashcard versions
Former-commit-id: ab2323f1a31d65205bde24388306ab4eff1d8dde [formerly 676c3627e777cbe582206e53ae761555236b1f6d] [formerly 91d8fc768a5dcc23776f262fb58f8c769f3cc341 [formerly 066d6157ada608f6c4d9b7ad3f1413ea0ba4041c]]
Former-commit-id: ec1ccdf669cc9dcec3fa2b271837705e51c69feb [formerly 33795423fc6e68aff5af792c4889f9d115fdd797]
Former-commit-id: f3baebb8d3f380267b5305ed61dad1b0ae0f5780

--- a/war/LangTest.css
+++ b/war/LangTest.css
@@ -99,6 +99,27 @@ h1 {
     color : #f0f9fb;
 }
 
+.primaryButtonColor {
+    background-color: #006DCC;
+}
+
+.clearButtonColor {
+     background-color: #ffffff;
+ }
+
+.successButtonColor {
+    background-color: #5BB75B;
+
+}
+
+.infoButtonColor {
+    background-color: #49AFCD;
+}
+
+.warningButtonColor {
+    background-color: #FAA732;
+}
+
 .noPadding {
     padding-top: 5px;
 }
